// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleThumbnail /> should render correctly 1`] = `
<ArticleThumbnail
  className="ArticleThumbnail-sc-1pvkf9f-0 hCXvzE"
  image={Object {}}
>
  Test
</ArticleThumbnail>
`;

exports[`<ArticleThumbnail /> should render correctly with clickable image and title 1`] = `
<ArticleThumbnail
  anchorProps={
    Object {
      "className": "AnchorClass",
      "target": "_blank",
      "to": "#",
    }
  }
  className="ArticleThumbnail-sc-1pvkf9f-0 hCXvzE"
  image={
    Object {
      "alt": "Dummy Image",
      "placeholderSrc": "/images/image-placeholder.png",
      "sizes": "(min-width: 36em) 33.3vw, 100vw",
      "src": "/images/dummies/320.png",
      "srcset": "/images/dummies/1280.png 1024w, /images/dummies/640.png 640w, /images/dummies/320.png 320w",
    }
  }
  readMoreContent="ReadMore"
>
  Test
</ArticleThumbnail>
`;

exports[`<ArticleThumbnail /> should render correctly with no clickable image and title 1`] = `
<ArticleThumbnail
  anchorProps={
    Object {
      "className": "AnchorClass",
      "target": "_blank",
      "to": "#",
    }
  }
  className="ArticleThumbnail-sc-1pvkf9f-0 hCXvzE"
  image={
    Object {
      "alt": "Dummy Image",
      "placeholderSrc": "/images/image-placeholder.png",
      "sizes": "(min-width: 36em) 33.3vw, 100vw",
      "src": "/images/dummies/320.png",
      "srcset": "/images/dummies/1280.png 1024w, /images/dummies/640.png 640w, /images/dummies/320.png 320w",
    }
  }
>
  Test
</ArticleThumbnail>
`;

exports[`<ArticleThumbnail /> should render correctly with readmore button 1`] = `
<ArticleThumbnail
  className="ArticleThumbnail-sc-1pvkf9f-0 hCXvzE"
  image={Object {}}
>
  Test
</ArticleThumbnail>
`;
